# real-time-agent

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: _containerTemplate.yml  _terraformDestroyTemplate.yml  _terraformEnvironmentTemplate.yml  _terraformImportTemplate.yml  _terraformStateUnlockTemplate.yml  container.yml  lint.yml  terraform.yml  terraformImport.yml  terraformStateUnlock.yml
code/backend/: Dockerfile  README.md  app.py  logs.py  pyproject.toml  utils.py
code/backend/agents/: welcome.yaml
code/backend/api/v1/: api_v1.py
code/backend/api/v1/endpoints/: calls.py  heartbeat.py  realtime.py
code/backend/app/: app.py  logs.py
code/backend/app/api/v1/: api_v1.py
code/backend/app/api/v1/endpoints/: calls.py  heartbeat.py  realtime.py
code/backend/app/calls/: client.py  process.py  utils.py  validate.py
code/backend/app/core/: settings.py
code/backend/app/health/: validate_request.py
code/backend/app/models/: calls.py  heartbeat.py  realtime.py
code/backend/app/realtime/: agentmanager.py  communication.py  tools.py
code/backend/calls/: process.py  utils.py
code/backend/core/: settings.py
code/backend/health/: validate_request.py
code/backend/models/: calls.py  heartbeat.py
code/backend/realtime/: communication.py
code/infra/: aiservice.tf  applicationinsights.tf  communicationservice.tf  containerapps.tf  data.tf  eventgrid.tf  keyvault.tf  locals.tf  main.tf  providers.tf  roleassignments.tf  roleassignments_current.tf  roleassignments_uai.tf  terraform.tf  userassignedidentity.tf  variables.tf
config/: .env.template
config/dev/: azurerm.tfbackend  vars.tfvars
docs/: AudioLLM-As-A-Judge-Approach.md  AudioLLM-As-A-Judge-Evaluation-Results  AudioLLM-As-A-Judge.md  AzureArchitecture.md  ConceptualArchitecture.md  DeclarativeAgents.md  DelarativeAgents.md  README.md
docs/architecture/: README.md  architecture.vsdx  ~$$architecture.~vsdx
docs/setup/: README.md
examples/: complete_workflow_demo.py
src/real_time_agent/: __init__.py
src/real_time_agent/core/: __init__.py  agent.py  config.py  interfaces.py
src/real_time_agent/examples/: advanced_streaming.py  ai_foundry_example.py  basic_usage.py
src/real_time_agent/integrations/: __init__.py  ai_foundry.py  azure_openai.py
src/real_time_agent/utils/: helpers.py
tests/: test_basic.py
