[project]
name = "backend"
version = "0.1.0"
description = "This is the backend API for the Real-Time Agent project, which provides RESTful endpoints to manage and interact with real-time agents. It handles agent lifecycle management, communication, and integration with Azure services."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-communication-callautomation==1.5.0",
    "azure-eventgrid==4.22.0",
    "azure-monitor-opentelemetry==1.8.6",
    "fastapi[standard]==0.136.1",
    "openai-agents==0.16.1",
    "opentelemetry-instrumentation-httpx==0.60b0",
    "opentelemetry-instrumentation-openai-agents==0.60.0",
    "opentelemetry-instrumentation-system-metrics==0.60b0",
    "pydantic-settings==2.14.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "pytest==9.0.3",
]

[tool.uv]
required-version = ">=0.8.9"
